--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                 <div class="input-field col s12">          
                     <a href="login.html" id="btnLogin" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>Login</a>
                     <a href="register.html" id="btnRegister" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>Register</a>      
-                    <a href="table.html" id="btnTable" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>Show Table</a>
+                    <a href="email.html" id="btnEmail" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>Email</a>
                     <a href="about.html" id="btnAbout" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>About</a>
                     <a href="testing1.html" id="btnTest" class="waves-effect waves-light btn-large lime darken-4 hide"><i class="material-icons left">chevron_right</i>Testing</a>
                     <a href="quiz.html" id="btn_Basic" class="waves-effect waves-light btn-large lime darken-4"><i class="material-icons left">chevron_right</i>進入挑戰</a>
